--- a/ClientHotel/src/app/promotion/promotion.component.css
+++ b/ClientHotel/src/app/promotion/promotion.component.css
@@ -17,7 +17,8 @@ html {
 h1{
     --font-title: "Ubuntu";
     --color-main: #dfaa5b;
-    --font-content: sans-serif;}
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+font-weight: bold;}
 
 /* INTRODUCE */
 .container_intro {
