--- a/ClientHotel/src/app/app.component.html
+++ b/ClientHotel/src/app/app.component.html
@@ -1,3 +1,3 @@
-<div class="body"><div app-sign-in></div></div>
-
+<!-- <div app-sign-in></div> -->
+<div app-sign-up></div>
 <router-outlet></router-outlet>
