--- a/ClientHotel/src/app/sign-in/sign-in.component.css
+++ b/ClientHotel/src/app/sign-in/sign-in.component.css
@@ -5,6 +5,7 @@ body{
   font-family: 'Ubuntu', sans-serif;
   background-image: url(/assets/images/bg1.jpg);
   background-size: cover;
+  background-attachment: fixed;
   background-repeat: no-repeat;
   padding: 0;
   position: absolute;
