Add ForgetPW Page

--- a/ClientHotel/src/app/app.component.html
+++ b/ClientHotel/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!-- <div app-sign-in></div> -->
-<div app-sign-up></div>
+<!-- <div app-sign-up></div> -->
+<div app-forget-pw></div>
 <router-outlet></router-outlet>
