--- a/ClientHotel/src/app/forget-pw/forget-pw.component.css
+++ b/ClientHotel/src/app/forget-pw/forget-pw.component.css
@@ -8,6 +8,7 @@ body {
   background-size: cover;
   width: 100%;
   height: 100%;
+  font-family: 'Ubuntu', sans-serif;
 }
 .sign_in {
   width: 100%;
