--- a/AdminHotel/src/app/app.component.css
+++ b/AdminHotel/src/app/app.component.css
@@ -50,10 +50,13 @@ body{
   border: 1px solid #9d9d9d;
   padding: 10px 20px;
 }
-.function button:nth-child(2){
+.function button:focus{
+  background-color: #ddd;
+}
+.function button:nth-child(2), .function button:nth-child(3), .function button:nth-child(4){
   border-bottom: 0;
 }
-.function button:nth-child(2), .function button:nth-child(3){
+.function button:nth-child(2), .function button:nth-child(3), .function button:nth-child(4), .function button:nth-child(5){
   border-left: 0;
   border-right: 0;
 }
